deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: "production-cluster-issuer" 
spec:
  ingressClassName: cilium                               
  tls:
    - hosts:
        - whoami.karolayne.com
      secretName: whoami-tls
  rules:
    - host: whoami.karolayne.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
